Remove title from index.html
Removed title from HTML head section.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="refresh" content="0; url=https://franekk3.github.io/FishKy/">
-    <title>Przekierowanie...</title>
+    <title> </title>
 </head>
 <body>
     <p><a href="https://franekk3.github.io/FishKy/"> Click here !</a>.</p>
