Update links and redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://franekk3.github.io/FishKy/">
+    <meta http-equiv="refresh" content="0; url=https://franekk3.github.io/Fisq/">
     <title> </title>
 </head>
 <body>
-    <p><a href="https://franekk3.github.io/FishKy/"> Click here !</a>.</p>
+    <p><a href="https://franekk3.github.io/Fisq/"> Click here !</a>.</p>
 </body>
 </html>
